fix: footer spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -554,6 +554,6 @@ nav {
 
 @layer std {
     footer {
-        margin-block-start: 5rem;
+        margin-block-start: 10rem;
     }
 }
